# UNED-deepsocial-autorship

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: search_config.yaml  seed_accounts.yaml
docs/: GUIA_COLABORADORES.md  compilar.sh
src/deepsocial/data/: make_dataset.py
src/deepsocial/features/: extract_behavior.py  extract_stylometry.py  extract_visual.py  predict_veracity.py
src/deepsocial/models/: fusion_report.py
src/deepsocial/utils/: drive_sync.py
tests/: test_stylometry.py
