[project]
name = "deepsocial-authorship"
version = "0.1.0"
description = "Detección de autoría coordinada y análisis de veracidad (Fake News) en redes sociales (PEC4)."
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pillow>=10.2.0",
    "open-clip-torch>=2.24.0",
    "tqdm>=4.66.0",
    "hydra-core>=1.3.0",
    "loguru>=0.7.0",
    "dvc>=3.48.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deepsocial"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
